@@ -32,16 +32,12 @@ cb_properties_activate                (GtkMenuItem     *menuitem,
                                         gpointer         user_data);
 
 void		cb_show_memory_maps (GtkMenuItem *menuitem, gpointer data);
-
 void		cb_renice (GtkMenuItem *menuitem, gpointer data);
-
-
 void		cb_add_to_favorites (GtkMenuItem *menuitem, gpointer data);
-
+void		cb_end_process (GtkMenuItem *menuitem, gpointer data);
+void		cb_kill_process (GtkMenuItem *menuitem, gpointer data);
 void		cb_hide_process (GtkMenuItem *menuitem, gpointer data);
-
 void		cb_show_hidden_processes (GtkMenuItem *menuitem, gpointer data);
-
 void		cb_preferences_activate (GtkMenuItem *menuitem, gpointer user_data);
 
 void
