@@ -1,5 +1,16 @@
 2001-08-06  Kevin Vandersloot <kfv101@psu.edu>
 
+	* favorites.c: add a little padding around the "remove from
+	list" button label.
+
+	* interface.c: add 'end process' and 'kill process' to main menu.
+	Put the hidden process manager into the settings menu.
+
+	* callbacks.c (cb_[kill,end]_process): new callbacks for the new
+	menuitems.
+
+2001-08-06  Kevin Vandersloot <kfv101@psu.edu>
+
 	* interface.c: make disk frame label center align to be
 	similar to the graph frame labels.
 
